# Turtle-Web

./: .gitignore  README.md
Back-end/: .env  docker-compose.yml  pyproject.toml
Back-end/docker/docker_env/: dockerfile
Back-end/docker_db/: docker-compose.yml  dockerfile
Back-end/docker_db/init-db/: 01_backup.sql
Back-end/turtle_project/: celerybeat-schedule
Back-end/turtle_project/apps/user/: admin.py  consumers.py  models.py  tasks.py
Back-end/turtle_project/apps/user/api/: serializers.py  views.py
Back-end/turtle_project/apps/user/migrations/: 0001_initial.py  0010_user_custom_commands.py
Back-end/turtle_project/core/: celery.py  settings.py  urls.py
Front-end/: index.html  package-lock.json  package.json
Front-end/src/: App.jsx  index.css  main.jsx
Front-end/src/api/: authApi.js  axiosClient.js  lessonApi.js
Front-end/src/components/: ProtectedRoute.jsx
Front-end/src/components/Workspace/: ChatbotBubble.jsx  CommandModal.jsx  CommandPalette.jsx  Editor.jsx  Preview.jsx  Sidebar.jsx
Front-end/src/contexts/: AuthContext.jsx  ProjectContext.jsx  ThemeContext.jsx
Front-end/src/hooks/: useTheme.js
Front-end/src/pages/: NotFoundPage.jsx
Front-end/src/pages/Auth/: AuthPage.jsx
Front-end/src/pages/Profile/: ProfilePage.jsx
Front-end/src/pages/Wiki/: WikiPage.jsx
Front-end/src/pages/Workspace/: WorkspacePage.jsx
Front-end/src/utils/: constants.js
